--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
 theme: jekyll-theme-hacker
+
+title: 'Haaite Tennis Club'
+description: 'fundamental, professional, intelligible'
+
+baseurl: ''
+
+footer:
+  since: 2000
